--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ plugins:
 staging: https://staging.d1gaaywk86e2om.amplifyapp.com
 prod: https://master.d1gaaywk86e2om.amplifyapp.com
 shareicon: /images/isomer-logo.svg
-is_government: false
+is_government: true
 facebook-pixel: ""
 google_analytics: ""
 google_analytics_ga4: ""
