--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 logo: /images/strata titles boards logo.png
 links:
-  - title: about us
+  - title: About Us
     url: /example-page/
   - title: Contact Us
     url: /contact-us/
