--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ links:
     url: /example-page/
   - title: Our Panel Members
     url: /our-panel-members
+  - title: Useful Links
+    url: /useful-links
   - title: Contact Us
     url: /contact-us/
   - title: Example Folder
