--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,6 +6,8 @@ links:
     url: /our-panel-members
   - title: Useful Links
     url: /useful-links
+  - title: Careers
+    url: /careers
   - title: Contact Us
     url: /contact-us/
   - title: Example Folder
