--- a/_config.yml
+++ b/_config.yml
@@ -59,4 +59,4 @@ facebook-pixel: ""
 google_analytics: ""
 google_analytics_ga4: ""
 linkedin-insights: ""
-resources_name: judgments
+resources_name: all
