--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 logo: /images/strata titles boards logo.png
 links:
   - title: About Us
-    url: /example-page/
+    url: /about-us/
   - title: Our Panel Members
     url: /our-panel-members
   - title: Resources
